--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,47 @@
-@(welcome: String)
+@(welcome: String)(implicit request: RequestHeader)
 <html>
-  <h1>
-    @welcome
-  </h1>
+  <head></head>
+  <body>
+    <h1>@welcome</h1>
+    <div id="tweets"></div>
+    <script>
+
+      function appendTweets(text) {
+        var tweet = document.createElement("p");
+        var message = document.createTextNode(text);
+        tweet.appendChild(message);
+        document.getElementById("tweets").appendChild(tweet);
+      }
+      
+      function connect(attempt) {
+        var connectionAttempt = attempt;
+        var url = "@routes.Application.tweets.webSocketURL()";
+        var tweetSocket = new WebSocket(url);
+        tweetSocket.onmessage = function (event) {
+          console.log(event);
+          var data = JSON.parse(event.data);
+          appendTweets(data.text);
+        };
+
+        tweetSocket.onopen = function() {
+          connectionAttempt = 1;
+          tweetSocket.send("subscribe");
+        };
+
+        tweetSocket.onclose = function () {
+          if(connectionAttempt <= 3) {
+            appendTweets("WARNING: Lost server connection, attempting to reconnect. Attempt number " + connectionAttempt);
+            setTimeout(function () {
+              connect(connectionAttempt + 1)
+            }, 5000)
+          } else {
+            alert("The connection with the server was lost.");
+          }
+        };
+
+      }
+
+      connect(1)
+    </script>
+  </body>
 </html>
